<resources>
    <string name="app_name">维权联盟</string>
    <string name="empty_acc_pwd">账号或密码为空</string>
    <string name="network_unavailable">网络不可用，请检查网络设置</string>


    <!-- 网易云信登录sdk状态码对应提示 -->
    <string name="code_201">客户端版本不对，需升级sdk</string>
    <string name="code_301">抱歉，此账号已被封禁</string>
    <string name="code_302">用户名或密码错误</string>
    <string name="code_315">IP限制</string>
    <string name="code_403">非法操作或没有权限</string>
    <string name="code_404">账号不存在</string>
    <string name="code_405">参数长度过长</string>
    <string name="code_406">对象只读</string>
    <string name="code_408">请求超时</string>
    <string name="code_414">参数错误</string>
    <string name="code_415">网络错误</string>
    <string name="code_416">操作频繁</string>
    <string name="code_417">重复操作</string>
    <string name="code_422">账号被禁用</string>
    <string name="code_431">HTTP重复请求</string>
    <string name="code_500">服务器内部错误</string>
    <string name="code_503">服务器繁忙</string>
    <string name="code_509">无效协议</string>
    <string name="code_514">服务不可用</string>
    <string name="code_998">解包错误</string>
    <string name="code_999">打包错误</string>
    <string name="code_1000">操作异常</string>


    <string name="login_exception">登录异常，请稍候再试</string>
    <string name="login_ing">正在登录...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_msg">我的消息</string>
    <string name="net_broken">网络连接已断开，请检查网络设置</string>
    <string name="kickout">您已被挤下线，请重新登录</string>
    <string name="press_again">再按一次退出</string>
    <string name="ed1">当事人主体资格</string>
    <string name="ed2">原告拥有商标权</string>
    <string name="ed3">被告实施商标侵权行为</string>
    <string name="ed4">禁止侵权开支</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">我的地址</string>
    <string name="contact_info">联系方式</string>
    <string name="sign">签约</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="check_process">查看流程</string>
    <string name="register_success">注册成功!</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="committing">正在提交...</string>
    <string name="timeout_retry">连接超时, 请稍后再试!</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="read_file_error">读取文件出错</string>
    <string name="login_timeout">登录超时</string>
    <string name="server_exeption">服务器异常</string>
    <string name="upload_trademark">上传商标</string>
    <string name="knowledge_right">知识产权</string>
    <string name="company_name">企业名称</string>
    <string name="input_company_name">输入企业名称</string>
    <string name="please_choose">请选择</string>
    <string name="notification_setting">通知设置</string>
    <string name="change_pwd">密码修改</string>
    <string name="info_change">资料修改</string>
    <string name="old_pwd">旧密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="pwd_not_same">密码不一致</string>
    <string name="upload_ed">上传证据</string>
    <string name="contact_content">1、甲方是依据中华人民共和国法律成立后有效存续的公司/合伙企业； \n\n 2、乙方是依法设立的社会团体法人，是湖南省律师的自律性组织，依据《中华人民共和国律师法》、《湖南省律师协会章程》，对全省律师和律师事务所实施行业管理的组织平台； \n\n 3、双方在此确认，本协议签署后，双方即建立战略合作伙伴关系，乙方可指派专门人员配合甲方业务的开展，收集整理侵权需求，进行初期评估、筛选，进行风险控制，进行前期收集被侵权相关资料。 为使得战略合作关系的长期、稳定、良好，实现资源共享、优势互补，提升双方在各自领域的核心竞争力，双方根据有关法律、法规和规范性文件规定，经协商一致，在自愿、平等、互利和诚信原则的基础上，特签署本战略合作协议以资信守。</string>
    <string name="read_contract">我已阅读完合同内容</string>
    <string name="uploading">提交中......</string>
    <string name="send_code">发送验证码</string>
    <string name="examming">待审核</string>
    <string name="pay_order">支付订单</string>
    <string name="no_order">暂无订单</string>
    <string name="checkout_account">切换账号</string>
    <string name="inline_pay">线上支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="wxpay">微信支付</string>
    <string name="pay_note">本案需支付律师案件处理费</string>
    <string name="pay_total_money">￥ xxxx</string>

    <string name="update_version_hint">维权联盟更新</string>
    <string name="new_version_colon">新版本：</string>
    <string name="has_last_version">已经是最新版本</string>
    <string name="download">下载</string>
    <string name="check_update">检测更新</string>
    <string name="check_updating">正在检测最新版本...</string>

    <string name="download_failed">下载失败</string>
    <string name="unable_to_open_camera">无法打开相机</string>
    <string name="error">错误</string>
    <string name="fight_fake">打假</string>

</resources>
