<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BJ"
    android:divider="@drawable/onedp_divider_bg"
    android:showDividers="middle"
    android:orientation="vertical"
    tools:context="gkzxhn.wqalliance.mvp.ui.activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/W"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/old_pwd"
            android:textSize="16sp"
            android:textColor="@color/ONE"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/input_old_pwd"
            android:textSize="14sp"
            android:textColor="@color/TWO"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/W"
        android:layout_height="44dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_pwd"
            android:textSize="16sp"
            android:textColor="@color/ONE"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/TWO"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/W"
        android:layout_height="44dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_pwd"
            android:textSize="16sp"
            android:textColor="@color/ONE"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/input_new_pwd"
            android:textSize="14sp"
            android:textColor="@color/TWO"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp" />
    </LinearLayout>
</LinearLayout>
