<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BJ"
    android:paddingTop="10dp"
    android:divider="@drawable/onedp_divider_bg"
    android:showDividers="middle"
    tools:context="gkzxhn.wqalliance.mvp.ui.activity.SettingActivity">

    <LinearLayout
        android:id="@+id/ll_notification_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="@color/W"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notification_setting"
            android:textColor="@color/TWO" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:background="@color/W"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/change_pwd"
            android:textColor="@color/TWO" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_info"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:background="@color/W"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_change"
            android:textColor="@color/TWO" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toright" />
    </LinearLayout>
</LinearLayout>
