<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BJ"
    android:paddingTop="10dp"
    android:divider="@drawable/onedp_divider_bg"
    android:showDividers="middle"
    tools:context="gkzxhn.wqalliance.mvp.ui.activity.SignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/W">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/upload_trademark"
            android:textColor="@color/ONE"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_upload_trademark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/add_pic_icon"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/W">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/knowledge_right"
            android:textColor="@color/ONE"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_knowledge_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/add_pic_icon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/W">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/company_name"
            android:textColor="@color/ONE"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/input_company_name"
            android:textColor="@color/TWO"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_contract"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/W">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="签订合同"
            android:textColor="@color/ONE"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/toright" />
    </LinearLayout>
</LinearLayout>
