<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_register_shape"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/update_dialog_layoutt_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update_version_hint"
            android:textColor="@color/ONE"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/update_dialog_layoutt_tv_new_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_version_colon"
            android:textColor="@color/ONE"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/update_dialog_layout_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:layout_below="@+id/update_dialog_layoutt_tv_app_name"
            android:layout_marginTop="10dip"
            android:layout_toLeftOf="@+id/update_dialog_layoutt_tv_down_load_progress"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/update_dialog_layout_tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0MB/0MB"
            android:textColor="@color/B"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:id="@+id/update_dialog_layout_v_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/TWO" />

        <LinearLayout
            android:id="@+id/update_dialog_layout_ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/update_dialog_layout_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/TWO"
                android:textSize="16sp" />

            <View
                android:id="@+id/update_dialog_layout_v_mid"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/L" />

            <TextView
                android:id="@+id/update_dialog_layout_tv_download"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@color/ONE"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>